--- a/teleop_ws/src/mpc_interpolation/package.xml
+++ b/teleop_ws/src/mpc_interpolation/package.xml
@@ -9,9 +9,10 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>joint_angles_interface</depend>
+  <depend>roake_control_interfaces</depend>
   <depend>rclcpp</depend>
   <depend>Eigen3</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
