--- a/teleop_ws/src/start_up/package.xml
+++ b/teleop_ws/src/start_up/package.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>joint_angles_interface</name>
+  <name>start_up</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="hanmg@buaa.edu.cn">hanmg</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <depend>rosidl_default_generators</depend>
-  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
