--- a/teleop_ws/src/.vscode/settings.json
+++ b/teleop_ws/src/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-    "cmake.sourceDirectory": "/home/meng/teleop_ws/src/wiseglove18"
+    "cmake.sourceDirectory": "/home/meng/teleop_ws/src/wiseglove18",
+    "ros.distro": "humble",
+    "python.autoComplete.extraPaths": [
+        "/opt/ros/humble/lib/python3.10/site-packages",
+        "/opt/ros/humble/local/lib/python3.10/dist-packages",
+        "/opt/drake/lib/python3.10/site-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/opt/ros/humble/lib/python3.10/site-packages",
+        "/opt/ros/humble/local/lib/python3.10/dist-packages",
+        "/opt/drake/lib/python3.10/site-packages"
+    ]
 }
